--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button .impresora, a img{
 }
 .contenedor-transparente{
     background-color: rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(10px);
     color: white;
 }
@@ -51,8 +51,11 @@ tbody, thead{
     color: white;
 }
 .table{
+    backdrop-filter: blur(4px);
+}
+.table > tbody > tr:hover{
     background-color: rgba(0, 0, 0, 0.3);
-    
+    color: white;
 }
 .mostrarResultados{
     background-color: rgba(0, 0, 0, 0.3);
