--- a/controlVentas/style.css
+++ b/controlVentas/style.css
@@ -1,4 +1,67 @@
 body{
-    background-color: rgb(94, 102, 18);
+    background-color: rgb(138, 152, 15);
 }
 
+.seccionVentas{
+    background-color: #616b09;
+    margin: 15px;
+}
+.section-title{
+    font-size: 22px;
+    margin: 10px;
+}
+.ventas-buscar{
+    background-color: rgba(141, 141, 141, 0.3);
+    border: 2px solid rgb(150, 150, 150);
+    height: 40px;
+    width: 100%;
+    font-weight: bold;
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+.ventas-buscar:focus{
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    border-style: none;
+    border-color: var(--transparente);
+}
+.ventas-buscar::placeholder{
+    color: white;
+}
+.table-container{
+    overflow-y: scroll;
+    height: 300px;
+}
+.table-container::-webkit-scrollbar{
+    width: 10px;
+}
+.table-container::-webkit-scrollbar-track{
+    background: rgba(0, 0, 0, 0);
+}
+.table-container::-webkit-scrollbar-thumb {
+    background-color: #00000000;
+    border: 3px solid #ffffff;
+}
+.realizarventa-button, .total-section{
+    width: 100%;
+    height: 40px;
+    background-color: rgba(234, 255, 0, 0.532);
+    border: none;
+}
+.realizarventa-button{
+    font-size: 25px;
+    margin-bottom: 15px;
+
+}
+.total-section{
+    background-color: rgba(0, 0, 0, 0.3);
+    text-align: center;
+    align-items: center;
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.realizarventa-button:hover{
+    background-color: rgb(234, 255, 0);
+}
