--- a/controlVentas/style.css
+++ b/controlVentas/style.css
@@ -65,3 +65,7 @@ body{
 .realizarventa-button:hover{
     background-color: rgb(234, 255, 0);
 }
+.agregar-servicios{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
